<resources>
    <string name="app_name">NotesApplication</string>
    <string name="search_notes">Search your notes</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="header">My Notes</string>
    <string name="add_note_text">Type note here ...</string>
    <string name="options">Options</string>
    <string name="pick_color">Pick Color</string>
    <string name="note_title_hint">Note Title</string>
    <string name="add_image">Add image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add_url_btn_text">ADD</string>
    <string name="cancel_url_btn_text">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
</resources>